# peregrine

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
benchmarks/: bench_fused.py  bench_gpu.py  bench_matmul.py  bench_suite.py  plots.py  report.py  scaling.py  sweep_blocking.py
benchmarks/results/: cpu02_f64_refbox.json  cpu02_f64_zpicy.json  cpu03_f32_shape_refbox.json  cpu03_f32_shape_zpicy.json  cpu06_f32_refbox.json  cpu06_f32_zpicy.json  cpu06_f64_refbox.json  cpu06_f64_zpicy.json  fuse05_cpu_f32_refbox.json  fuse05_cpu_f32_zpicy.json  fuse05_gpu_f32_refbox.json  fuse05_gpu_f32_zpicy.json  refbox_gpu_matrix.json  refbox_matmul_f32.json  refbox_matmul_f64.json  zpicy_calibration.json  zpicy_gpu_matrix.json  zpicy_matmul_f32.json  zpicy_matmul_f64.json
benchmarks/results/tuning/: scaling_refbox.json  scaling_zpicy.json  sweep_refbox.json  sweep_zpicy.json
legacy/: MathExt.cpp  README.md  benchmark_matrix.py  matrix_multiplication_results_v2.txt  plot.py  test.py  test_mathext.py  test_matrix.py
python/fastmathext/: __init__.py  calibrate.py  policy.py
python/peregrine/: __init__.py  calibrate.py  policy.py
src/bindings/: module.cpp
src/core/: common.hpp
src/cpu/: aligned_alloc.hpp  feature_detect.cpp  feature_detect.hpp  fused.hpp  fused_avx2.cpp  fused_naive.cpp  gemm_blis.cpp  gemm_blis.hpp  gemm_naive.cpp  gemm_naive.hpp  microkernel.hpp  microkernel_avx2_f32.cpp  microkernel_avx2_f64.cpp  pack.cpp  pack.hpp  reduce.cpp  reduce.hpp  transpose.cpp  transpose.hpp
src/cuda/: check.cuh  context.cu  context.cuh  fused.cu  fused.cuh  gemm_cublas.cu  gemm_cublas.cuh  probe.cu  transfer.cu  transfer.cuh
src/dispatch/: dispatch.cpp  dispatch.hpp
tests/: conftest.py  test_bench_protocol.py  test_calibration.py  test_cuda.py  test_errors.py  test_fallback.py  test_fused.py  test_matmul_correctness.py  test_matmul_fastpath.py  test_matmul_property.py  test_ops.py  test_plots.py  test_release.py  test_threads.py
