[build-system]
requires = ["scikit-build-core==0.12.2", "nanobind==2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fastmathext"
version = "3.0.0.dev0"
description = "Heterogeneous linear algebra for Python: packed AVX2 CPU kernels and a CUDA backend behind one zero-copy, NumPy-compatible API"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Abdalla ElDoumani" }]
dependencies = ["numpy>=2.0,<3"]

[project.optional-dependencies]
test = ["pytest==9.0.3", "hypothesis==6.155.2"]
bench = ["pytest-benchmark==5.2.3", "threadpoolctl==3.6.0", "psutil"]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/fastmathext"]

[tool.scikit-build.cmake.define]
FME_ENABLE_CUDA = { env = "FME_ENABLE_CUDA", default = "OFF" }
